collapse+expand folders, fix save btn

--- a/webapp/finder/find/theme/styles/pages/results.css
+++ b/webapp/finder/find/theme/styles/pages/results.css
@@ -1781,9 +1781,9 @@ height: 152px;
 
 }
 .entity-tab a.entity-tab-label {
-	color:#999;
+	color:#eee;
 	padding:0 5px 0 12px;
-	font-weight: 600;
+	
 	max-width: 230px;
 	max-height: 32px;
 	-webkit-box-orient: vertical;
@@ -1796,6 +1796,10 @@ height: 152px;
 .entity-tab a.entity-tab-label:hover,
 .entity-tab.current-entity a.entity-tab-label {
 	color:#ccc;
+}
+.entity-tab-label-type {
+	font-weight: 600;
+	color:#fff;
 }
 .entity-tab a.entity-tab-close {
 	font-size:0.8em;
@@ -1823,6 +1827,13 @@ height: 152px;
 	background-color: #222;
 }
 
+.collapsedmediabox.entity-media-box {
+	height: 40px;
+	min-height: 40px;
+}
+.expandmediabox {
+	cursor: pointer;
+}
 
 .entity-media-header  {
   height: 30px;
